--- a/pages/project/index_Z.html
+++ b/pages/project/index_Z.html
@@ -11,9 +11,9 @@
 	
    <body bgcolor="#151515">
       <div id = "menu" align = "middle" >
-         <a href = "index.html">HOME</a> | 
-         <a href = "/about/contact_us.htm">PROJECT</a> | 
-         <a href = "/about/index.htm">ABOUT</a>
+         <a href = "../index.html">HOME</a> | 
+         <a href = "../test/index_A.html">TEST</a> | 
+         <a href = "../project/index_Z.html">ABOUT</a>
       </div>
 
 
