framed three pages inter link... need estethic

--- a/pages/test/index_A.html
+++ b/pages/test/index_A.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="style/bluestyle.css">
+    <link rel="stylesheet" href="../styles/init.css">
+    <title>AboutMe!</title>
 </head>
 <body>
+    <style>
+        body {
+          background-image: url('img_hello_world.jpeg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 50%;
+        }
+    </style>
+    <div id="container">
+        <div id="header">
+            <h1>Germain Hebert</h1>
+        </div>
 
-<h1>Hello world!</h1>
-<div><img src="img_hello_world.jpeg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<div><img src="img_hello_git.jpeg" alt="Hello Git" style="width:10%;max-width:640px"></div>
+    </div>
+        <!-- <div><img src="img_hello_world.jpeg" alt="Hello World from Space" style="width:100%;max-width:640px"></div> -->
+    <div id="spec">
+        <h1>About Me...</h1>
+            <p>This is the first file in my new Git Repo.</p>
+            <p>This line is here to show how merging works.</p>
+    </div>
 
+    <div><img src="img_hello_git.jpeg" alt="Hello Git" style="width:10%;max-width:640px"></div>
+
+    <div id="extra">
+        <p><strong>Projects</strong></p>
+        <ul>
+            <li>Game Design</li>
+            <li>Level Design</li>
+            <li>Code And Devs</li>
+        </ul>
+    </div>
+    <div id="footer">   
+        <h3>Selected</h3>
+        <div id = "menu" align = "middle" >
+            <a href = "../index.html">HOME</a> | 
+            <a href = "../project/index_Z.html">PROJECT</a> | 
+            <a href = "index_A.html">ABOUT</a>  
+        </div>
+    </div>
 </body>
 </html>
