--- a/pages/project/index_Z.html
+++ b/pages/project/index_Z.html
@@ -12,13 +12,13 @@
     <div id="wrapper">
         <div id="content">
 
-            <h3 id="#london">London</h3>
+            <h3 id="#GameDesign">GameDesign</h3>
             <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
             <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-            <h3 id="#paris">Paris</h3>
+            <h3 id="#LevelDesign">LevelDesign</h3>
             <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
             <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-            <h3 id="#tokyo">Tokyo</h3>
+            <h3 id="#CodeDevs">CodeDevs</h3>
             <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
             <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
         </div>
@@ -30,23 +30,24 @@
             <li><a href="#LevelDesign">LeveDesign</a></li>
             <li><a href="#CodeDevs">CodeDevs</a></li>
         </ul>
-</div>
-<div id="extra">
-    <p><strong>Projects</strong></p>
-    <!-- <h3>Selected</h3> -->
-    <ul>
-        <li>Game Design</li>
-        <li>Level Design</li>
-        <li>Code And Devs</li>
-    </ul>
+        <p><strong>Projects</strong></p>
+        <!-- <h3>Selected</h3> -->
+        <ul>
+            <li>Game Design</li>
+            <li>Level Design</li>
+            <li>Code And Devs</li>
+        </ul>
+    </div>
 </div>
 <div id="footer">   
-  <h3>Selected</h3>
+    <div id="extra">
+    <h3>Selected</h3>
     <div id = "menu" align = "middle" >
          <a href = "../index.html">HOME</a> | 
          <a href = "../project/index_Z.html">PROJECT</a> |
          <a href = "../test/index_A.html">ABOUT</a>  
-      </div>
+    </div>
+</div>
 </body>
 </html>
 
