--- a/pages/test/index_A.html
+++ b/pages/test/index_A.html
@@ -1,28 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../styles/init.css">
+    <!-- <link rel="stylesheet" href="../styles/init.css"> -->
+    <link rel="stylesheet" href="../styles/std.css">
     <title>AboutMe!</title>
 </head>
 
 <body>
-    <div id="filig">
-    <div id="container">
-        <div id="header">
-            <h1>Germain Hebert</h1>
+
+    <!-- need tier / deux tier -->
+    <!-- first_tier: foto, Id, skill, coord,  -->
+    <!-- deux-tiers: descrp. Job Exp. Scolar, Particip.   -->
+
+    <div class="w3-third">
+        <div class="w3-white w3-text-grey w3-card-4">
+            <div class="w3-display-container">
+                <img src="img_hello_git.jpeg" alt="Hello Git" style="width:80%;max-width:640px">
+
+            </div>
+            <div class="w3-container">
+                <h3>Coding</h3>
+                <ul>
+                    <li>VS Code</li>
+                    <li>GitHub</li>
+                    <li>C++, C, Shell</li>
+                    <li>VM, MarkDown</li>
+                    <li>DB, *AWS</li>
+                </ul>
+                <h3>Design</h3>
+                <ul>
+                    <li>Sketchup</li>
+                    <li>Unity3D</li>
+                    <li>Blender</li>
+                    <li>Gimp</li>
+                </ul>
+                <h3>Web</h3>
+                <ul>
+                    <li>HTML / CSS</li>
+                    <li>CMS / JSon</li>
+                    <li>PHP / SQL</li>
+                </ul>
+            </div>
         </div>
-
     </div>
-        <!-- <div><img src="img_hello_world.jpeg" alt="Hello World from Space" style="width:100%;max-width:640px"></div> -->
-    <div id="spec">
-        <h1>About Me...</h1>
-            <p>This is the first file in my new Git Repo.</p>
-            <p>This line is here to show how merging works.</p>
+    <div class="w3-twothird">
+        <div class="w3-container w3-card w3-white w3-margin-bottom">
+            ::before
+            <h1>Germain Hebert</h1>
+            ::after
+            <div id="container">
+                <h2>About Me...</h2>
+                <p>This is the first file in my new Git Repo.</p>
+                <p>This line is here to show how merging works.</p>
+            </div>
+        </div>
     </div>
-    </div>
-
-    <div><img src="img_hello_git.jpeg" alt="Hello Git" style="width:10%;max-width:640px"></div>
-
     <div id="extra">
         <p><strong>Projects</strong></p>
         <ul>
