--- a/pages/test/index_A.html
+++ b/pages/test/index_A.html
@@ -1,61 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link rel="stylesheet" href="../styles/init.css"> -->
-    <link rel="stylesheet" href="../styles/std.css">
-    <title>AboutMe!</title>
+    <link rel="stylesheet" href="../styles/init.css">
+    <title>About Me</title>
 </head>
 
 <body>
-
     <!-- need tier / deux tier -->
     <!-- first_tier: foto, Id, skill, coord,  -->
     <!-- deux-tiers: descrp. Job Exp. Scolar, Particip.   -->
 
-    <div class="w3-third">
-        <div class="w3-white w3-text-grey w3-card-4">
-            <div class="w3-display-container">
-                <img src="img_hello_git.jpeg" alt="Hello Git" style="width:80%;max-width:640px">
+    <div id="container">
+        <div id="header">
+              <h1>About Me</h1>
+        </div>
+        <div id="wrapper">
+            <div id="content">
+                <h3>Former Game Designer</h3>
+                <p>The Flex Layout module is new layout module in CSS3 made to improve the items align, directions and order
+                    in the container even when they are with dynamic or even unknown size. The prime characteristic of the
+                    flex container is the ability to modify the width or height of its children to fill the available space
+                    in the best possible way on different screen sizes.
+                </p>
+                <p>Flexbox is relatively new, but it enjoys excellent browser support today (nearly 83% of browsers support
+                    Flexbox). Flexbox Layout is used for small application components, whereas CSS Grid Layout Module is
+                    aimed to handle the large scale layouts.
+                </p>
+                <h3>Programming</h3>
+                <p>When working with flexbox you need to think in terms of two axes — the main axis and the cross axis. The
+                    main axis is defined by the flex-direction property, and the cross axis runs perpendicular to it.
+                    Everything we do with flexbox refers back to these axes, so it is worth understanding how they work from
+                    the outset.
+                </p>
+            </div>
+        </div>
 
-            </div>
-            <div class="w3-container">
-                <h3>Coding</h3>
-                <ul>
-                    <li>VS Code</li>
-                    <li>GitHub</li>
-                    <li>C++, C, Shell</li>
-                    <li>VM, MarkDown</li>
-                    <li>DB, *AWS</li>
-                </ul>
-                <h3>Design</h3>
-                <ul>
-                    <li>Sketchup</li>
-                    <li>Unity3D</li>
-                    <li>Blender</li>
-                    <li>Gimp</li>
-                </ul>
-                <h3>Web</h3>
-                <ul>
-                    <li>HTML / CSS</li>
-                    <li>CMS / JSon</li>
-                    <li>PHP / SQL</li>
-                </ul>
-            </div>
+        <div id="navigation">
+            <img src="img_hello_git.jpeg" alt="Hello Git" style="width:80%;max-width:640px">
+            
+            <!-- <p><strong>Persona</strong></p> -->
+            <h3>Coding</h3>
+            <ul>
+                <li>VS Code</li>
+            </ul>
+            <h3>Design</h3>
+            <ul>
+                <li>Sketchup</li>
+            </ul>
+            <h3>Web</h3>
+            <ul>
+                <li>HTML / CSS</li>
+            </ul>
+            <!-- </div> -->
         </div>
-    </div>
-    <div class="w3-twothird">
-        <div class="w3-container w3-card w3-white w3-margin-bottom">
-            ::before
-            <h1>Germain Hebert</h1>
-            ::after
-            <div id="container">
-                <h2>About Me...</h2>
-                <p>This is the first file in my new Git Repo.</p>
-                <p>This line is here to show how merging works.</p>
-            </div>
-        </div>
-    </div>
-    <div id="extra">
+        <div id="extra">
         <p><strong>Projects</strong></p>
         <ul>
             <li>Game Design</li>
