--- a/pages/test/index_A.html
+++ b/pages/test/index_A.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../styles/init.css">
+    <link rel="stylesheet" href="../styles/preset.css">
     <title>About Me</title>
 </head>
 
@@ -15,6 +16,7 @@
               <h1>About Me</h1>
         </div>
         <div id="wrapper">
+        <div class="two-third">
             <div id="content">
                 <h3>Former Game Designer</h3>
                 <p>The Flex Layout module is new layout module in CSS3 made to improve the items align, directions and order
@@ -33,6 +35,7 @@
                     the outset.
                 </p>
             </div>
+        </div>
         </div>
 
         <div id="navigation">
