--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,15 @@
 <body>
 <div id="container">
     <div id="header">
+        
         <h1>Germain Hebert</h1>
+        <div="header-pic">
+            <img src=./test/"img_hello_git.jpeg" alt="Hello Git" style="width:80%;max-width:640px">
+        </div>
+        <div id="coords-box">
+            <p>Email: hebertgermain.qc@gmail.com</p>
+            <p>Cell: 418 909 9439</p>
+        </div>
     </div>
     
     <div id="wrapper">
