--- a/pages/project/index.html
+++ b/pages/project/index.html
@@ -47,8 +47,8 @@
 
         <div id = "menu" align = "middle" >
             <a href = "../index.html">HOME</a> | 
-            <a href = "../project/index_Z.html">PROJECT</a> |
-            <a href = "../test/index_A.html">ABOUT</a>  
+            <a href = "../project/index.html">PROJECT</a> |
+            <a href = "../test/index.html">ABOUT</a>  
         </div>
     </div>
 </div>
