--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -75,8 +75,8 @@
         <h3>Selected</h3>
         <div id = "menu" align = "middle" >
             <a href = "../index.html">HOME</a> | 
-            <a href = "../project/index_Z.html">PROJECT</a> | 
-            <a href = "index_A.html">ABOUT</a>  
+            <a href = "../project/index.html">PROJECT</a> | 
+            <a href = "index.html">ABOUT</a>  
         </div>
     </div>
 </body>
