--- a/pages/index.html
+++ b/pages/index.html
@@ -7,17 +7,20 @@
 
 <body>
 <div id="container">
-    <div id="header">
-        
-        <h1>Germain Hebert</h1>
+    <!-- <div id="header"> -->
+    <div id="top">
+        <div id="header-name">
+            <h1>Germain Hebert</h1>
+        </div>
         <div="header-pic">
-            <img src=./test/"img_hello_git.jpeg" alt="Hello Git" style="width:80%;max-width:640px">
+            <img src="test/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
         </div>
         <div id="coords-box">
             <p>Email: hebertgermain.qc@gmail.com</p>
             <p>Cell: 418 909 9439</p>
         </div>
     </div>
+    <!-- </div> -->
     
     <div id="wrapper">
         <div id="content">
@@ -76,8 +79,8 @@
     <div id="footer">        
         <div  id = "menu" align="middle" >
             <a href = "index.html">HOME</a> | 
-            <a href = "project/index_Z.html">PROJECT</a> | 
-            <a href = "test/index_A.html">ABOUT</a>  
+            <a href = "project/index.html">PROJECT</a> | 
+            <a href = "test/index.html">ABOUT</a>  
          </div>
     </div>
 </div>
