--- a/pages/lang/french.html
+++ b/pages/lang/french.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/init.css">
+    <link rel="stylesheet" href="../styles/init.css">
     <title>PortFolio</title>
 </head>
 
@@ -14,14 +14,14 @@
                         <h1>Germain Hebert</h1>
                     </div>        
                     <div="header-pic">
-                        <img src="test/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
+                        <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
                     </div>
                     <div id="coords">
-                        <p>Language:</p>
+                        <p>Langues:</p>
                         <ul>
-                            <li><a href="lang/french.html">French : Native</a></li>
-                            <li><a href="lang/english.html">English: Advanced</a></li>
-                            <li><a href="lang/spanish.html">Spanish: Pre-Intermediate</a></li>
+                            <li><a href="french.html">Francais</a> : Maternelle</li>
+                            <li><a href="english.html">Anglais</a> : Courant</li>
+                            <li><a href="spanish.html">Espagnol</a> : Pre-Intermediaire</li>
                         </ul>
                     </div>
                 
@@ -29,22 +29,21 @@
             </div>
             <div id="wrapper">
                 <div id="content">
+                    <h3>Qui suis-je</h3>
+                    <p>Je suis un travailleur assidu et resilient, qui n’a pas peur du labeur, et qui préfère éviter le gaspillage.<br></p>
+                        <div id="pli"><em>&nbsp;&nbsp;&nbsp;- Cuisine/Hotellerie: Chef(Leader), Serveur (Public), Gerant (Responsable)...</em><br></div>
+                        <p>J'incarne un allié fervent pour une équipe, alors que mes qualités principales rayonnent de l'intérieur. <br></p>
+                        <div id="pli"><em>&nbsp;&nbsp;&nbsp;- Altruisme (Papa), Partage (Mentor), Civisme, ...Humilite.</em><br></div>
+                        <p>J'accomplis les tâches au meilleur de mes capacités, en respectant les consignes et les opinions, sans crainte d'exprimer une erreur potentielle.<br></p>
+                        <div id="pli"><em>&nbsp;&nbsp;&nbsp;- Volontaire, Dynamique, Enthousiaste.</em><br></div>
+                        <p>J’ai la quete du savoir! Constant besoin d’apprentissage, de tester et d’innover, d’ameliorer les connaisances aquises.<br></p>
+                        <div id="pli"><em>&nbsp;&nbsp;&nbsp;- AEC (limoilou): GameDesign, LevelDesign; <br>  &nbsp;&nbsp;&nbsp;- (42Quebec): Programmation/ Develloppeur.</em><br></div>
                 
-                    <h3>Former Game Designer</h3>
-                    <p>The Flex Layout module is new layout module in CSS3 made to improve the items align, directions and order
-                        in the container even when they are with dynamic or even unknown size. The prime characteristic of the
-                        flex container is the ability to modify the width or height of its children to fill the available space
-                        in the best possible way on different screen sizes.
-                    </p>
-                    <p>Flexbox is relatively new, but it enjoys excellent browser support today (nearly 83% of browsers support
-                        Flexbox). Flexbox Layout is used for small application components, whereas CSS Grid Layout Module is
-                        aimed to handle the large scale layouts.
-                    </p>
-                    <h3>Programming</h3>
-                    <p>When working with flexbox you need to think in terms of two axes — the main axis and the cross axis. The
-                        main axis is defined by the flex-direction property, and the cross axis runs perpendicular to it.
-                        Everything we do with flexbox refers back to these axes, so it is worth understanding how they work from
-                        the outset.
+                    <h3>Complement d'information</h3>
+                    <p>
+                        &nbsp;&nbsp;&nbsp;-Type de Joueur : Centre Défensif [unité spéciale]<br>
+                        &nbsp;&nbsp;&nbsp;-Totem : Caméléon [ornithorynque] <br>
+
                     </p>
                 </div>
             </div>
@@ -83,7 +82,7 @@
             </div>
             <div id="footer">        
                 <div  id = "menu" align="middle" >
-                    <a href = "index.html">HOME</a> | 
+                    <a href = "french.html">HOME</a> | 
                     <a href = "project/index.html">PROJECT</a> | 
                     <a href = "test/index.html">ABOUT</a>  
                 </div>
