--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -7,42 +7,65 @@
         <link rel="stylesheet" href="../styles/init.css">        
     </head>
 </head>
+<style>
+    .mySlide {display:none;}
+</style>
+
 
 <body>
     <div id="header">
           <h1>Portfolio</h1>
     </div>
-    <div class="container">
-          <div id="wrapper">
-              <div id="content">
+    <!-- <div class="container"> -->
+        <div id="wrapper">  <!--  body holder -->
+              <div id="content">  <!-- third /two-third holder -->
 
                 <div class="slideshow">                        
                     <div class="slide" data-index="0">
                         <h2>Game Design</h2>
                         <p>School Project Visual Refs</p>
-                        <img src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+
+                        <!-- <img src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
                         <img src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
                         <img src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
                         <img src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
-                        <img src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;" >
+                        <img src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;" > -->
+                        <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                        <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                        <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
+                        <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                        <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;" >
                     </div>
                     <div class="slide" data-index="1">
                         <h2>Level Design</h2>
                         <p>School Project Request</p>
-                        <img src="LevelD/gallery-img-03.jpg" alt="Level Design Image 1" style="width:80%;max-width:180px;" >
+
+                        <!-- <img src="LevelD/gallery-img-03.jpg" alt="Level Design Image 1" style="width:80%;max-width:180px;" >
                         <img src="LevelD/gallery-img-09.jpg" alt="Level Design Image 2" style="width:80%;max-width:180px;" >
                         <img src="LevelD/gallery-img-12.jpg" alt="Level Design Image 3" style="width:80%;max-width:180px;" >
                         <img src="LevelD/gallery-img-20.jpg" alt="Level Design Image 4" style="width:80%;max-width:180px;" >
-                        <img src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" >
+                        <img src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" > -->
+
+                        <img class="mySlide2" src="LevelD/gallery-img-03.jpg" alt="Level Design Image 1" style="width:80%;max-width:180px;" >
+                        <img class="mySlide2" src="LevelD/gallery-img-09.jpg" alt="Level Design Image 2" style="width:80%;max-width:180px;" >
+                        <img class="mySlide2" src="LevelD/gallery-img-12.jpg" alt="Level Design Image 3" style="width:80%;max-width:180px;" >
+                        <img class="mySlide2" src="LevelD/gallery-img-20.jpg" alt="Level Design Image 4" style="width:80%;max-width:180px;" >
+                        <img class="mySlide2" src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" >
                     </div>
                     <div class="slide" data-index="2">
                         <h2>Programming</h2>
                         <p>School Project Request</p>
-                        <img src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
+                        <!-- <img src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
                         <img src="DevsCode/gallery-img-72.jpg" alt="DevsCode Image 2" style="width:80%;max-width:180px;" >
                         <img src="DevsCode/gallery-img-74.jpg" alt="DevsCode Image 3" style="width:80%;max-width:180px;" >
                         <img src="DevsCode/gallery-img-77.jpg" alt="DevsCode Image 4" style="width:80%;max-width:180px;" >
-                        <img src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" >
+                        <img src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" > -->
+
+                        <img class="mySlide3" src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-72.jpg" alt="DevsCode Image 2" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-74.jpg" alt="DevsCode Image 3" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-77.jpg" alt="DevsCode Image 4" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" >
                     </div>
                     <div class="nav">
                         <button class="prev">Prev</button>
@@ -53,7 +76,7 @@
                
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
     <div id="navigation">
         <div class="sidebar">
@@ -76,5 +99,9 @@
     </div>
 </div>
 <script src="../assets/script.js"></script>
+
+
 </body>
 </html>
+
+
