--- a/pages/test_index.html
+++ b/pages/test_index.html
@@ -14,7 +14,7 @@
                         <h1>Germain Hebert</h1>
                     </div>        
                     <div="header-pic">
-                        <img src="test/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
+                        <img src="../pages/assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
                     </div>
                     <div id="coords">
                         <p>Language:</p>
