--- a/pages/test_index.html
+++ b/pages/test_index.html
@@ -91,7 +91,7 @@
         <!-- </div> -->
     <!-- </div> --> -->
     <!-- <script type="text/javascript">AddFillerLink("content", "navigation", "extra")</script>     -->
-    <!-- </div>
+     </div> 
     <script src="./assets/frame.js"></script>
 </body> 
 </html>
