--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Slideshow</title>
-        <!-- <link rel="stylesheet" href="../styles/slideshow.css">         -->
-        <link rel="stylesheet" href="../styles/init.css">        
+        <link rel="stylesheet" href="../styles/slideshow.css">        
+        <!-- <link rel="stylesheet" href="../styles/init.css">         -->
     </head>
 </head>
 <body>
@@ -21,11 +21,11 @@
 
                         <h2>Game Design</h2>
                         <p>School Project Visual Refs</p>
-                        <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
-                        <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
-                        <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
-                        <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
-                        <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;" >
+                                <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                                <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                                <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
+                                <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                                <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;">
                     </div>
                     <div class="slide" data-index="1">
 
@@ -38,7 +38,7 @@
                         <img class="mySlide2" src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" >
                     </div>
                     <div class="slide" data-index="2">
-                        
+
                         <h2>Programming</h2>
                         <p>School Project Request</p>
                         <img class="mySlide3" src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
