--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -40,21 +40,11 @@
     <div id="footer">   
 
         <div id = "menu" align = "middle" >
-            <a href = "../lang/english.html">HOME</a> | 
-            <a href = "eng_proj.html">PROJECT</a> |
+            <a href = "../lang/french.html">HOME</a> | 
+            <a href = "fra_proj.html">PROJECT</a> |
             <a href = "../test/index.html">ABOUT</a>  
         </div>
     </div>
 </div>
 </body>
 </html>
-<!-- 
-<h3 id="#GameDesign">GameDesign</h3>
-<p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-<p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-<h3 id="#LevelDesign">LevelDesign</h3>
-<p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-<p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-<h3 id="#CodeDevs">CodeDevs</h3>
-<p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-<p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p> -->
