tres for both page one_p and portf

--- a/pages/lang/french.html
+++ b/pages/lang/french.html
@@ -83,7 +83,7 @@
             <div id="footer">        
                 <div  id = "menu" align="middle" >
                     <a href = "french.html">HOME</a> | 
-                    <a href = "project/eng_proj.html">PROJECT</a> | 
+                    <a href = "../project/fra_proj.html">PROJECT</a> | 
                     <a href = "test/index.html">ABOUT</a>  
                 </div>
             </div>
