--- a/pages/lang/spanish.html
+++ b/pages/lang/spanish.html
@@ -85,7 +85,7 @@
             <div id="footer">        
                 <div  id = "menu" align="middle" >
                     <a href = "spanish.html">HOME</a> | 
-                    <a href = "project/index.html">PROJECT</a> | 
+                    <a href = "../project/spa_proj.html">PROJECT</a> | 
                     <a href = "test/index.html">ABOUT</a>  
                 </div>
             </div>
