--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -1,4 +1,4 @@
-<!--  Web pages for portfolio  -->
+<!--  Web pages for portfolio  ENGLISH -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,10 +9,27 @@
         <link rel="stylesheet" href="../styles/slideshow.css">        
         <!-- <link rel="stylesheet" href="../styles/init.css">         -->
     </head>
-</head>
+
 <body>
     <div id="header">
-          <h1>Portfolio</h1>
+        <div id="top">
+            <div id="header-name">
+                <h1>Germain Hebert Portfolio En</h1>
+            </div>        
+            <div="header-pic">
+                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
+            </div>
+            <div id="coords">
+                <p>Language:</p>
+                <ul>
+                    <li><a href="fra_proj.html">French</a> : Native</li>
+                    <li><a href="eng_proj.html">English</a>: Advanced</li>
+                    <li><a href="spa_proj.html">Spanish</a>: Pre-Intermediate</li>
+                </ul>
+            </div>
+        
+        </div>
+          
     </div>
         <div id="wrapper">  <!--  body holder -->
             <div id="content">  <!-- third /two-third holder -->
@@ -67,12 +84,12 @@
     <div id="footer">   
         <div id = "menu" align = "middle" >
             <a href = "../lang/english.html">HOME</a> | 
-            <a href = "eng_proj.html">PROJECT</a> |
+            <a href = "./eng_proj.html">PROJECT</a> |
             <a href = "../test/index.html">ABOUT</a>  
         </div>
     </div>
 </div>
-<script src="../assets/script.js"></script>
+<script src="../assets/script3.js"></script>
 </body>
 </html>
 
