--- a/pages/project/diapo.html
+++ b/pages/project/diapo.html
@@ -91,7 +91,7 @@
       </div>
   </div>
 </div>
-<script src="../assets/script.js"></script>
+<script src="../assets/script3.js"></script>
 </body>
 </html>
 
