--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -1,4 +1,111 @@
+<!--  Web pages for portfolio   FRENCH -->
+
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portfolio Slideshow</title>
+        <link rel="stylesheet" href="../styles/slideshow.css">        
+        <!-- <link rel="stylesheet" href="../styles/init.css">         -->
+    </head>
+</head>
+<body>
+    <div id="header">
+        <div id="top">
+            <div id="header-name">
+                <h1>Germain Hebert Portfolio Fr</h1>
+            </div>        
+            <div="header-pic">
+                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
+            </div>
+            <div id="coords">
+                <p>Langues:</p>
+                <ul>
+                    <li><a href="fra_proj.html">Francais</a> : Maternelle</li>
+                    <li><a href="eng_proj.html">Anglais</a> : Courant</li>
+                    <li><a href="spa_proj.html">Espagnol</a> : Pre-Intermediaire</li>
+                </ul>
+            </div>
+        
+        </div>
+    </div>
+        <div id="wrapper">  <!--  body holder -->
+            <div id="content">  <!-- third /two-third holder -->
+                    <div class="slideshow">                        
+                        <div class="slide" data-index="0">
+
+                            <h2>Game Design</h2>
+                            <p>School Project Visual Refs</p>
+                                    <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;">
+                        </div>
+                        <div class="slide" data-index="1">
+
+                            <h2>Level Design</h2>
+                            <p>School Project Request</p>
+                            <img class="mySlide2" src="LevelD/gallery-img-03.jpg" alt="Level Design Image 1" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-09.jpg" alt="Level Design Image 2" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-12.jpg" alt="Level Design Image 3" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-20.jpg" alt="Level Design Image 4" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" >
+                        </div>
+                        <div class="slide" data-index="2">
+
+                            <h2>Programming</h2>
+                            <p>School Project Request</p>
+                            <img class="mySlide3" src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
+                            <img class="mySlide3" src="DevsCode/gallery-img-72.jpg" alt="DevsCode Image 2" style="width:80%;max-width:180px;" >
+                            <img class="mySlide3" src="DevsCode/gallery-img-74.jpg" alt="DevsCode Image 3" style="width:80%;max-width:180px;" >
+                            <img class="mySlide3" src="DevsCode/gallery-img-77.jpg" alt="DevsCode Image 4" style="width:80%;max-width:180px;" >
+                            <img class="mySlide3" src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" >
+                        </div>
+                        <div class="nav">
+                            <button class="prev">Prev</button>
+                            <button class="next">Next</button>
+                        </div>           
+                    </div>
+            </div>
+        </div>
+    <div id="navigation">
+        <div class="sidebar">
+            <ul class="project-list">
+                <li class="project-item" data-index="0">GameDesign</li>
+                <li class="project-item" data-index="1">LeveDesign</li>
+                <li class="project-item" data-index="2">CodeDevs</li>
+            </ul>
+        </div>
+    </div>
+    <div id="extra">
+    <div id="footer">   
+        <div id = "menu" align = "middle" >
+            <a href = "../lang/french.html">HOME</a> | 
+            <a href = "./fra_proj.html">PROJECT</a> |
+            <a href = "../test/index.html">ABOUT</a>  
+        </div>
+    </div>
+</div>
+<script src="../assets/script3.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -24,9 +131,9 @@
     </div>
 
     <div id="navigation">
-        <div class="sidebar">
-            <!-- Sidebar content goes here -->
-            <ul class="project-list">
+        <div class="sidebar"> -->
+          
+            <!-- <ul class="project-list">
                 <li class="project-item" data-index="0">GameDesign</li>
                 <li class="project-item" data-index="1">LeveDesign</li>
                 <li class="project-item" data-index="2">CodeDevs</li>
@@ -47,4 +154,4 @@
     </div>
 </div>
 </body>
-</html>
+</html> -->
