--- a/pages/project/eng_proj copy.html
+++ b/pages/project/eng_proj copy.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Slideshow</title>
-        <link rel="stylesheet" href="../styles/preset.css">        
-        <link rel="stylesheet" href="../styles/init.css">        
+        <link rel="stylesheet" href="../styles/slideshow.css">        
+        <!-- <link rel="stylesheet" href="../styles/init.css">         -->
     </head>
 
 <body>
@@ -16,9 +16,9 @@
             <div id="header-name">
                 <h1>Germain Hebert Portfolio En</h1>
             </div>        
-                <div="header-pic">
-                    <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-                </div>
+            <div="header-pic">
+                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
+            </div>
             <div id="coords">
                 <p>Language:</p>
                 <ul>
@@ -38,104 +38,21 @@
 
                             <h2>Game Design</h2>
                             <p>School Project Visual Refs</p>
-                            <div id="gallery">
-                                <ul id="navig">
-                                    <li>
-                                        <a href="#picture1">
-                                            <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:70%;max-width:180px;">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture2">
-                                            <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:70%;max-width:180px;">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture3">
-                                            <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:70%;max-width:180px;">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture4">
-                                            <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:70%;max-width:180px;">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture5">
-                                            <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
-                                        </a>
-                                    </li>
-                                </ul>
-                            <div id="full-picture">
-                                <div>
-                                    <img id="picture1" alt="Game Design Big Image 1" src="GameD/gallery-img-30.jpg" />
-                                </div>
-                                <div>
-                                    <img id="picture2" alt="Game Design Big Image 2"  src="GameD/gallery-img-31.jpg" />
-                                </div>
-                                <div>
-                                    <img id="picture3" alt="Game Design Big Image 3" src="GameD/gallery-img-32.jpg" />
-                                </div>
-                                <div>
-                                    <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
-                                </div>
-                                <div>
-                                    <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34jpg" />
-                                </div>
-                            </div>
+                                    <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                                    <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;">
                         </div>
-
                         <div class="slide" data-index="1">
 
                             <h2>Level Design</h2>
                             <p>School Project Request</p>
-                            <div id="gallery">
-                                <ul id="navig">
-                                    <li>
-                                        <a href="#picture1">
-                                            <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-03.jpg" style="width:80%;max-width:180px;" >
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture2">
-                                            <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-09.jpg"  style="width:80%;max-width:180px;" >
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture3">
-                                            <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-12.jpg"  style="width:80%;max-width:180px;" >
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture4">
-                                            <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-20.jpg" style="width:80%;max-width:180px;" >
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#picture5">
-                                            <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-50.jpg" style="width:80%;max-width:180px;" >
-                                        </a>
-                                    </li>
-                                </ul>
-
-                                <div id="full-picture">
-                                    <div>
-                                        <img id="picture1" alt="Game Design Big Image 1" src="LevelD/gallery-img-03.jpg" />
-                                    </div>
-                                    <div>
-                                        <img id="picture2" alt="Game Design Big Image 2"  src="LevelD/gallery-img-09.jpg" />
-                                    </div>
-                                    <div>
-                                        <img id="picture3" alt="Game Design Big Image 3" src="LevelD/gallery-img-12.jpg" />
-                                    </div>
-                                    <div>
-                                        <img id="picture4" alt="Game Design Big Image 4" src="LevelD/gallery-img-20.jpg" />
-                                    </div>
-                                    <div>
-                                        <img id="picture5" alt="Game Design Big Image 5" src="LevelD/gallery-img-50.jpg" />
-                                    </div>
-                                </div>
-                            </div>
+                            <img class="mySlide2" src="LevelD/gallery-img-03.jpg" alt="Level Design Image 1" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-09.jpg" alt="Level Design Image 2" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-12.jpg" alt="Level Design Image 3" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-20.jpg" alt="Level Design Image 4" style="width:80%;max-width:180px;" >
+                            <img class="mySlide2" src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" >
                         </div>
                         <div class="slide" data-index="2">
 
