--- a/pages/lang/english.html
+++ b/pages/lang/english.html
@@ -6,7 +6,6 @@
 </head>
 
 <body>
-    <!-- <div id="main"> -->
         <!-- <div id="container"> -->
             <div id="header">
                 <div id="top">
@@ -89,9 +88,8 @@
                 </div>
             </div>
         <!-- </div> -->
-    <!-- </div> --> -->
     <!-- <script type="text/javascript">AddFillerLink("content", "navigation", "extra")</script>     -->
-    <!-- </div>
+        </div>
     <script src="./assets/frame.js"></script>
 </body> 
 </html>
