--- a/pages/project/diapo.html
+++ b/pages/project/diapo.html
@@ -8,24 +8,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title of the document</title>
+    <title>SlideShow Bob!!! </title>
     <link rel="stylesheet" href="../styles/init.css">    
-    <link rel="stylesheet" href="../styles/preset.css">    
+    <link rel="stylesheet" href="../styles/preset.css">  
+    <link rel="stylesheet" href="../styles/slideshow.css">    
   </head>
 
   <body>
     <div id="header">
       <h1>Portfolio</h1>
+      <div id="coords">
+        <p>Language:</p>
+        <ul>
+            <li><a href="fra_proj.html">French</a> : Native</li>
+            <li><a href="eng_proj.html">English</a>: Advanced</li>
+            <li><a href="spa_proj.html">Spanish</a>: Pre-Intermediate</li>
+        </ul>
+    </div>
     </div>
     <div id="wrapper">  
       <div id="content">  <!-- third /two-third holder -->
       <!--  -->
-      <div class="slide" data-index="0">
+      <!-- <div class="slide" data-index="0"> -->
           <div id="gallery">
               <ul id="navig">
                 <li>
                   <a href="#picture1">
-                    <img alt="Game Design Image 1" src="GameD/gallery-img-30.jpg"  style="width:50%;max-width:180px;" />
+                    <img alt="Game Design Image 1" src="GameD/gallery-img-30.jpg"  style="width:70%;max-width:180px;" />
                   </a>
                 </li>
                 <li>
@@ -45,7 +54,7 @@
                 </li>
                 <li>
                   <a href="#picture5">
-                    <img alt="Game Design Image 5" src="GameD/gallery-img-34.jpg"  style="width:70%;max-width:180px;"/>
+                    <img alt="Game Design Image 5" src="GameD/gallery-img-35.jpg"  style="width:70%;max-width:180px;"/>
                   </a>
                 </li>
               </ul>
@@ -66,7 +75,7 @@
                 <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
               </div>
               <div>
-                <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34jpg" />
+                <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-35jpg" />
               </div>
             </div>
           </div>
